# VulkanRenderer

./: .gitignore  CMakeLists.txt  README.md
Configurations/: Components.json  GameObjects.json  Materials.json
Configurations/Rasterization/: Components.json  GameObjects.json  Materials.json
Configurations/RayTracing/: Components.json  GameObjects.json  Materials.json
Headers/: Application.hpp  Camera.h  GameObject.h  KeyboardMovementController.h  Model.hpp  MyWindow.hpp  Pipeline.hpp  RenderSystem.h  Renderer.h  SwapChain.hpp
Shaders/: GeometryShader.geom  GeometryShader.geom.spv  MyShader.frag  MyShader.frag.spv  MyShader.vert  MyShader.vert.spv  PBR.glsl  PointLight.frag  PointLight.frag.spv  PointLight.vert  PointLight.vert.spv  Shadow.frag  Shadow.frag.spv  Shadow.vert  Shadow.vert.spv  ShadowDisplay.frag  ShadowDisplay.frag.spv  ShadowDisplay.vert  ShadowDisplay.vert.spv  UBO.glsl  compileAllShaders.bat  compileShaders.bat
Shaders/Compute/: RayTracingDenoise.comp  RayTracingDenoise.comp.spv
Shaders/Gizmos/: UBO.glsl  axis.frag  axis.frag.spv  axis.vert  axis.vert.spv  edgeDetection.frag  edgeDetection.frag.spv  edgeDetection.geom  edgeDetection.geom.spv  edgeDetection.vert  edgeDetection.vert.spv  edgeDetectionStencil.vert  edgeDetectionStencil.vert.spv
Shaders/Grass/: Grass.frag  Grass.frag.spv  Grass.geom  Grass.geom.spv  Grass.tesc  Grass.tesc.spv  Grass.tese  Grass.tese.spv  Grass.vert  Grass.vert.spv  Ground.frag  Ground.frag.spv
Shaders/Post/: passthrough.vert  passthrough.vert.spv  post.frag  post.frag.spv
Shaders/RayTracing/: RayTracingGlobal.glsl  anyHit.rahit  anyHit.rahit.spv  raytrace.rahit  raytrace.rchit  raytrace.rchit.spv  raytrace.rgen  raytrace.rgen.spv  raytrace.rmiss  raytrace.rmiss.spv  raytrace1.rchit  raytrace1.rchit.spv  raytraceShadow.rmiss  raytraceShadow.rmiss.spv
Shaders/SkyBox/: SkyBox.frag  SkyBox.frag.spv  SkyBox.vert  SkyBox.vert.spv
Shaders/Utils/: random.glsl
Source/: Application.cpp  Application.h  Application.hpp  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  ComponentFactory.hpp  Descriptor.cpp  Descriptor.h  Device.cpp  Device.hpp  FrameInfo.h  GUI.hpp  GameObject.cpp  GameObject.h  GameObject.hpp  Image.cpp  Image.h  InputController.cpp  InputController.h  InputController.hpp  KeyboardController.cpp  KeyboardMovementController.cpp  KeyboardMovementController.h  Material.cpp  Material.h  Material.hpp  Model.cpp  Model.hpp  MyWindow.cpp  MyWindow.hpp  Pipeline.cpp  Pipeline.hpp  RenderManager.hpp  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  ResourceManager.hpp  (+10 more)
Source/Components/: CameraComponent.hpp  Component.hpp  LightComponent.hpp  MeshRendererComponent.hpp  RayTracingManagerComponent.hpp  RigidBodyComponent.hpp  TransformComponent.hpp
Source/Components/Input/: CameraMovementComponent.hpp  InputControllerComponent.hpp  ObjectMovementComponent.hpp
Source/Managers/: LogicManager.hpp  RenderManager.hpp  ResourceManager.hpp
Source/RayTracing/: BLAS.hpp  TLAS.hpp
Source/RenderSystems/: ComputeSystem.hpp  GizmosRenderSystem.hpp  GrassSystem.cpp  GrassSystem.h  GrassSystem.hpp  PointLightSystem.cpp  PointLightSystem.h  PostSystem.hpp  RayTracingSystem.hpp  RenderSystem.cpp  RenderSystem.h  ShadowSystem.cpp  ShadowSystem.h  ShadowSystem.hpp  SkyBoxSystem.hpp
Source/Renderers/: Renderer.cpp  Renderer.h
Source/Systems/: GrassSystem.cpp  GrassSystem.h  PointLightSystem.cpp  PointLightSystem.h  RenderSystem.cpp  RenderSystem.h  ShadowSystem.cpp  ShadowSystem.h
Source/Utils/: JsonUtils.hpp  Utils.hpp
(+3 files in other folders)
